--- a/RouteC41.G02.PL/RouteC41.G02.PL.csproj
+++ b/RouteC41.G02.PL/RouteC41.G02.PL.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\RouteC41.G02.BLL\RouteC41.G02.BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Files\Images\" />
+  </ItemGroup>
+
 </Project>
